# CurrencyConverter

./: .gitignore  pyproject.toml
app/: currency.py  data_store.py  main.py
tests/: test_currency.py  test_data_store.py
