[tool.poetry]
name = "currency-converter"
version = "0.1.0"
description = ""
authors = ["DudekMarek <dudek371@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.5.2"
argparse = "^1.4.0"
pytest = "^7.4.3"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
